<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headLineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/professional_information"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headLineText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:textColor="#1e272e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/experienceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dogus"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:textColor="#1e272e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/universityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bilkent_nmarmara"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textColor="#1e272e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skillsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/java_nandroid_nkotlin_nc_c"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="#ff3f34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>